# cleora

./: .gitignore  .replit  CHANGELOG.md  COMPARISON.md  Cargo.toml  LICENSE  README.md  benchmark_1024.py  benchmark_report.py  dom_datasets.py  dom_fast.py  dom_fb_competitors.py  dom_scale.py  dom_verify.py  domination_benchmark.py  domination_v2.py  example_classification.ipynb  example_dunnhumby_journey.ipynb  example_link_prediction.ipynb  full_benchmark.py  generate_umap_plots.py  pyproject.toml  replit.md  requirements.txt  run.py  scale_whiten_test.py  setup.py  test_scale_whiten.py  test_yelp_whiten.py
.agents/: agent_assets_metadata.toml
.github/workflows/: CI.yml  ci.yml  python-publish.yml  release.yml
cleora_python/: __init__.py
docs/: requirements.txt
docs/source/: algorithms.rst  conf.py  examples.rst  graph_creation.rst  index.rst  running.rst  why_cleora.rst
examples/: cleora_loop.py  column_indices.py  from_iterator.py  graph_pickle.py  predefined_cleora_loop.py
files/samples/: edgelist_1.tsv  edgelist_2.json
legacy/: example_classification.ipynb
legacy/.github/workflows/: release.yml
legacy/benches/: cleora_benchmark.rs
legacy/docs/source/: examples.rst  running.rst
legacy/files/samples/: edgelist_2.tsv
legacy/src/: configuration.rs  embedding.rs  persistence.rs  sparse_matrix.rs
legacy/tests/snapshots/: snapshot__embeddings_a_a.snap  snapshot__embeddings_b_c.snap
pycleora/: .gitignore  __init__.py  __main__.py  algorithms.py  align.py  benchmark.py  classify.py  cli.py  community.py  compress.py  datasets.py  ensemble.py  generators.py  hetero.py  io_utils.py  metrics.py  preprocess.py  pycleora.pyi  sampling.py  search.py  stats.py  tuning.py  viz.py
scripts/: post-merge.sh
src/: configuration.rs  embedding.rs  entity.rs  io.rs  lib.rs  main.rs  persistence.rs  pipeline.rs  sparse_matrix.rs  sparse_matrix_builder.rs
tests/: snapshot.rs
tests/snapshots/: snapshot__embeddings.snap  snapshot__embeddings_a_a.snap  snapshot__embeddings_a_b.snap  snapshot__embeddings_a_c.snap  snapshot__embeddings_b_c.snap  snapshot__sparse_matrices.snap  snapshot__tests__markov_left_01.snap  snapshot__tests__markov_left_02.snap  snapshot__tests__markov_sym_01.snap  snapshot__tests__markov_sym_02.snap
website/: app.py  sync_worker.py
website/static/: benchmarks.js  style.css
website/templates/: api.html  architecture.html  base.html  benchmarks.html  changelog.html  docs.html  functions.html  index.html  sync.html  use-cases.html  visuals.html
