[package]
name = "cleora"
version = "1.2.3"
authors = ["Piotr Babel <piotr.babel@synerise.com>", "Jacek Dabrowski <jack.dabrowski@synerise.com>", "Konrad Goluchowski <konrad.goluchowski@synerise.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = """
Cleora is a general-purpose model for efficient, scalable learning of stable and inductive entity embeddings for heterogeneous relational data.
"""

[lib]
name = "cleora"
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
bus = "2.2.4"
clap = { version = "3.1.8", features = ["cargo"] }
env_logger = "0.9.0"
log = "0.4.17"
memmap = "0.7.0"
rayon = "1.5.3"
rustc-hash = "1.1.0"
smallvec = "1.8.1"
twox-hash = "1.6.3"
simdjson-rust = {git = "https://github.com/SunDoge/simdjson-rust"}
ryu = "1.0.10"
ndarray = "0.15.4"
ndarray-npy = "0.8.1"
serde_json = "1.0.81"
uuid = { version = "1.1.2", features = ["v4"] }
pyo3 = { version = "0.16.5", features = ["extension-module"] }
arrow2 = { version="0.12.0", default-features = false, features = ["io_parquet", "io_parquet_compression"] }
rusoto_s3 = "0.42.0"
rusoto_core = "0.42.0"
chrono = "0.4.22"

[dev-dependencies]
criterion = "0.3.3"
insta = "1.3.0"

[[bench]]
name = "cleora_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
