[package]
name = "pycleora"
version = "2.0.0"
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/synerise/cleora"
homepage = "https://github.com/synerise/cleora"
repository = "https://github.com/synerise/cleora"
description = """
Sparse hypergraph structure and markov-propagation for node embeddings embeddings exposed via Python bindings.
"""

[lib]
crate-type = ["cdylib", "rlib"]

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
log = "0.4.17"
rayon = "1.5.3"
rustc-hash = "1.1.0"
smallvec = "1.8.1"
twox-hash = "1.6.3"
ndarray = { version = "0.15.4", features = ["rayon"] }
ndarray-npy = "0.8.1"
uuid = { version = "1.1.2", features = ["v4"] }
crossbeam = "0.8.1"
dashmap = { version = "5.3.4", features = ["rayon"] }
num_cpus = "1.13.1"
itertools = "0.10.3"
serde = { version = "1.0.163", features = ["derive"] }
bincode = "1.3.3"

pyo3 = "0.18.1"
numpy = "0.18"

[dev-dependencies]
criterion = "0.3.3"
insta = "1.3.0"
ndarray-rand = "0.14.0"

[[bench]]
name = "cleora_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[target.aarch64-apple-darwin]
linker = "aarch64-apple-darwin21.4-clang"
ar = "aarch64-apple-darwin21.4-ar"
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
