[build-system]
requires = ["maturin>=1.2.3"]
build-backend = "maturin"

[project]
name = "pycleora"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "3.2.0"
description = "Fast CPU-only graph embedding library with Rust core. Supports Cleora, DeepWalk, Node2Vec, ProNE, MLP, and more."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Jacek Dabrowski", email = "jack.dabrowski@synerise.com" }
]
license = { file = "LICENSE" }


[project.scripts]
pycleora = "pycleora.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
